Update README, working on deleting book from cart.

--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -12,6 +12,7 @@
           <span class="title">{{dataValues.title}}</span>
           {{/each}}
           <p style="padding-left: 15px;">{{dataValues.price}}</p>
+          <a class="delete-button" href="#" data-id={{this.id}}><i class="small material-icons">delete_forever</i></a>
           {{/each}}
         </li>
       </ul>   
