--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -34,6 +34,10 @@ p {
   margin-left: auto;
 }
 /* Important */
+#cart-items a {
+  margin-left: 5px;
+}
+/* Important */
 #nav {
   position: fixed;
   z-index: 996;
